--- a/index.html
+++ b/index.html
@@ -1,12 +1,94 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>News Today</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
+
 </head>
-<body>
-    <h1>i am gonna make a news website</h1>
+
+
+
+<body class="bg-light">
+
+    <!-- Button trigger modal -->
+  
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <header class=" container py-3">
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <h5 class="text-primary"><span
+                            class="text-white bg-primary px-2 py-1 me-2 rounded-2 table-hover:bg-black">News</span>Today
+                    </h5>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarScroll">
+                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+
+                    </ul>
+                    <form class="d-flex new" role="search">
+                        <h5 class="me-5 text-primary text-decoration-underline">News</h5>
+                        <h5 class="me-5 text-secondary">Blog</h5>
+                        <img style="width: 35px;" src="./images/man.png" alt="">
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <hr class="text-dark">
+    </header>
+
+    <main>
+        <section class="container new">
+            <div class="d-flex justify-content-between text-secondary">
+                <a><h5>Home</h5></a>
+                <a><h5>Breaking news</h5></a>
+                <a><h5>Regular news</h5></a>
+                <a><h5>International news</h5></a>
+                <a><h5>Sports</h5></a>
+                <a><h5>Entertainment</h5></a>
+                <a><h5>Culture</h5></a>
+                <a><h5>Arts</h5></a>
+                <a><h5>All news</h5></a>
+            </div>
+        </section>
+        <section class="container" id="main">
+        </section>
+
+    </main>
+
+    <footer class="bg-white py-5">
+        <h5 class="text-center text-secondary">Copyright 2022 News Today
+        </h5>
+    </footer>
+    <script src="./news.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+
 </html>
