--- a/index.html
+++ b/index.html
@@ -65,19 +65,12 @@
     </header>
 
     <main>
-        <section class="container new">
-            <div class="d-flex justify-content-between text-secondary">
-                <a><h5>Home</h5></a>
-                <a><h5>Breaking news</h5></a>
-                <a><h5>Regular news</h5></a>
-                <a><h5>International news</h5></a>
-                <a><h5>Sports</h5></a>
-                <a><h5>Entertainment</h5></a>
-                <a><h5>Culture</h5></a>
-                <a><h5>Arts</h5></a>
-                <a><h5>All news</h5></a>
-            </div>
+        <section id="category" class="container new d-flex justify-content-between text-secondary">
+            <div id="spinner" class="spinner-border d-none text-center" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
         </section>
+            <h4 id="search" class="container py-3 my-2 text-secondary bg-white"></h4>
         <section class="container" id="main">
         </section>
 
