--- a/blog.html
+++ b/blog.html
@@ -6,11 +6,27 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
-  <body class="container text-center">
-    <h1>difference between var let const</h1>
+  <body class="container p-5">
+    <h1 class=" text-center d-inline">1.What is Difference Between Var, Let and Const in JavaScript?</h1>
+    <h5><h4 class="d-inline text-decoration-underline">let: </h4>The let keyword declares a block-scoped local variable, optionally initializing it to a value.Block-scoped means that the variable is only available within the block it was declared in, which is usually denoted by curly 
+    braces {}.</h5>
+    
+    <h5><h4 class="d-inline text-decoration-underline">Var: </h4>The var keyword declares a function-scoped or global variable, optionally initializing it to a value.
+        Function-scoped means that the variable is only available within the function it was declared in. Global variables are available throughout your entire code.</h5>
+    
+        <h5><h4 class="d-inline text-decoration-underline">Const: </h4> The const keyword declares a block-scoped, immutable constant variable, i.e. a variable that can’t be reassigned.
+            Constants are also called “immutable variables”, but that’s a bit of a misnomer since they are actually variables – just ones that can’t be reassigned.</h5><br>
+
+
+            <h1 class=" text-center d-inline">What is Difference Between Arrow Function And Regular in JavaScript?</h1>
+
+
     <h1>difference between arrow func and regular funvc </h1>
     <h1>difference between map, foreach , filter, find </h1>
     <h1>WHY SHOULD I USE TEMPLATE STRIGN </h1>
+    <div>
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
