--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </ul>
                     <form class="d-flex new" role="search">
                         <h5 class="me-5 text-primary text-decoration-underline">News</h5>
-                        <h5 class="me-5 text-secondary">Blog</h5>
+                        <h5 class="me-5 text-secondary" onclick="pageRedirect()">Blog</h5>
                         <img style="width: 35px;" src="./images/man.png" alt="">
                     </form>
                 </div>
