--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,7 @@
         </div>
     </main>
     <footer class="text-center p-5 bg-white container-none">
-<h5 class="text-uppercase text-muted">All right reserved.Nasirul Islam Chy</h5>
+<h5 class="text-uppercase text-muted">Copyright 2022 News Today blogs</h5>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
