blog post modified and spinner added

--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
 
 
         </div>
-        <div>
+        <div class="mb-5">
             <h2 class=" text-center d-inline">(2) What is Difference Between Arrow Function And Regular in JavaScript?
             </h2>
             <p class="my-3">1. In regular function, this value is dynamic, In arrow function it equals to this of the
@@ -53,7 +53,7 @@
             </p>
 
         </div>
-        <div>
+        <div class="mb-5">
             <h2 class=" text-center d-inline my-5">(3) .forEach(), .map(), .filter() .... What's the difference?</h2>
 
             <h5>
