--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h4 id="search" class="container py-3 my-2 bg-white d-none">
             </h4>
             <section>
-                <div id="spinner" class="d-flex justify-content-center align-items-center d-none">
+                <div id="loader" class="text-center align-items-center d-none">
                     <div class="spinner-border" role="status">
                       <span class="visually-hidden">Loading...</span>
                     </div>
