--- a/blog.html
+++ b/blog.html
@@ -9,9 +9,9 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
-<body class="container bg-light">
+<body class="container bg-dark text-white">
     <header>
-        <h1 class="text-center text-decoration-underline">Welcome To Blog</h1>
+        <h1 class="text-center  mt-3 text-bg-dark ">Welcome To Blog</h1>
     </header>
     <main class="p-4">
         <div class="mb-5">
@@ -83,8 +83,9 @@
             </p><br>
         </div>
     </main>
-    <footer class="text-center p-5 bg-white container-none">
-<h5 class="text-uppercase text-muted">Copyright 2022 News Today blogs</h5>
+    <footer class="text-center bg-dark  container-none">
+        <hr>
+<h5 class="text-uppercase  p-5">Copyright 2022 News Today blogs</h5>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
